fix(tabs): add icon only 1px spacing (#17671)
* fix(tabs): add icon only 1px spacing

* chore: cleanup story updates

--- a/packages/styles/scss/components/tabs/_tabs.scss
+++ b/packages/styles/scss/components/tabs/_tabs.scss
@@ -504,6 +504,10 @@
       overflow-x: visible;
     }
 
+    .#{$prefix}--tabs__nav-item--icon-only {
+      margin-inline-end: convert.to-rem(1px);
+    }
+
     .#{$prefix}--tabs__nav-item--icon-only,
     &.#{$prefix}--tabs--contained .#{$prefix}--tabs__nav-item--icon-only {
       display: flex;
